# airbyte-source-gmail

./: .dockerignore  .gitignore  Dockerfile  README.md  acceptance-test-config.yml  configured_catalog.json  connector_registry_entry.json  main.py  metadata.yaml  pyproject.toml  test_catalog.json
integration_tests/: __init__.py  invalid_config.json.tmp.17029.1758062739017
source_gmail/: __init__.py  client.py  run.py  source.py  spec.py  streams.py  utils.py
